2002-01-30  Richard Williamson  <rjw@apple.com>
    
    Cleaned up frame code a bit.  Fixed duplicate content problem.

	* src/kdelibs/khtml/html/html_headimpl.cpp: (HTMLLinkElementImpl::detach):
	* src/kdelibs/khtml/khtmlview.cpp: (KHTMLView::layout):
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::~KHTMLPart), (KHTMLPart::openURL),
	(KHTMLPart::requestFrame):

2002-01-30  Kenneth Kocienda  <kocienda@apple.com>

        Added *.lo, *.la, and .libs to .cvsignore files
        
	* .cvsignore:
	* src/.cvsignore:
	* src/kdelibs/khtml/css/.cvsignore:
	* src/kdelibs/khtml/misc/.cvsignore:
	* src/kdelibs/kjs/.cvsignore:

2002-01-29  Richard Williamson  <rjw@apple.com>

    Fixed QConstString to make a copy on initial chars.
    
	* ChangeLog:
	* src/kwq/KWQString.mm: (QString::_copyIfNeededInternalString),
	(QString::insert), (QString::remove), (QString::replace), (QString::truncate),
	(QConstString::QConstString):
	* src/kwq/qt/qstring.h:

2002-01-29  Richard Williamson  <rjw@apple.com>

	* src/kwq/KWQString.mm: (QString::_copyIfNeededInternalString),
	(QString::insert), (QString::remove), (QString::replace), (QString::truncate),
	(QConstString::QConstString):
	* src/kwq/qt/qstring.h:

2002-01-29  Kenneth Kocienda  <kocienda@apple.com>

        - Added in a dummy protocol to clean up a warning that results
        from calling a method on an id.
        - Cleaned up handle variable in KWQKHTMLPart. This can now be freed
        once we get a proper notification that a load is done.
        - Support for reading text encoding from HTTP headers added back in.
        
	* include/WCURLHandle.h:
	* src/kwq/KWQKHTMLPart.mm: (encodingFromContentType), (KHTMLPart::slotData),
	(KHTMLPart::openURL), (KHTMLPart::closeURL):

2002-01-29  Richard Williamson  <rjw@apple.com>

    First pass as frame code.  Still needs cleanup.
    
	* src/kdelibs/khtml/dom/dom_misc.cpp: (DomShared::ref), (DomShared::deref):
	* src/kdelibs/khtml/dom/dom_misc.h: